# src/modules/don-hang/dto/update-don-hang.dto.ts
@@ -1,4 +1,5 @@
-import { PartialType } from '@nestjs/swagger';
+import { PartialType, PickType } from '@nestjs/swagger';
 import { CreateDonHangDto } from './create-don-hang.dto';
+import { DonHang } from '../entities/don-hang.entity';
 
-export class UpdateDonHangDto extends PartialType(CreateDonHangDto) {}
+export class UpdateDonHangDto extends PickType(DonHang, ['trangThaiDonHang']) {}
